# shu-bot

./: .gitignore  README.md  pyproject.toml  start.bat
config/: persona.example.txt
plugins/: database.py  echo.py  fortune.py  friend.py  maimai.py  message_utils.py  pet.py  reminder.py  state.py  tarot.py
